# tesseract-micr

./: README.md  logging.ini  pyproject.toml  tesseract_micr.ini
docs/: install.txt
docsultant/: app.py  config.py  core.py  hocr.py  imgproc.py  ocr.py
docsultant/app/admin/: admin.py
docsultant/app/test/: test.py
docsultant/app/web/static/: main.css
docsultant/app/web/templates/: home.j2
docsultant/app/web/templates/admin/: home.j2  info.j2
docsultant/app/web/templates/test/: home.j2
docsultant/tests/: test_ocr.py
tesseract_micr/: app.py  config.py  core.py  hocr.py  imgproc.py  ocr.py
tesseract_micr/admin/: admin.py
tesseract_micr/app/test/: test.py
tesseract_micr/app/web/templates/: home.j2
tesseract_micr/app/web/templates/admin/: home.j2
tesseract_micr/app/web/templates/test/: home.j2
tesseract_micr/core/: __init__.py  app.py  config.py
tesseract_micr/ocr/: __init__.py  ocr.py
tesseract_micr/test/: test.py
tesseract_micr/tests/: test_ocr.py
tesseract_micr/web/templates/admin/: info.j2
tesseract_micr/web/templates/test/: home.j2
